[package]
name = "nlaude"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sigv4 = "1"
aws-credential-types = "1"
urlencoding = "2"
dotenvy = "0.15"
